canadensis_dsdl_compiler/tests/compile_fail/union_variant_after_offset/canadensis/UnionVariantAfterOffset.1.0.uavcan

@union

int32 a
int8 b
@print _offset_
# Now the offset has been calculated, so no more variants are allowed.
int16 c

@sealed
